Fix broken <a> tag behavior
Do not make all links invisible by default. Instead, make links with a
further "contrast" class a contrasting white color.

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -19,9 +19,13 @@ html, body {
 }
 
 a {
-	color: white;
+	color: var(--blue);
 	font-weight: bold;
 	text-decoration: none;
+}
+
+a.contrast {
+	color: white !important;
 }
 
 a:hover {
